# resource-monitor

./: .env.example  .gitignore  Cargo.toml  QUICKSTART.md  README.md
agent/: Cargo.toml
agent/src/: main.rs
manager/: Cargo.toml
manager/src/: main.rs  state.rs
manager/src/api/: health.rs  machines.rs  metrics.rs  mod.rs  network.rs  web.rs
manager/static/: index.html  style.css
shared/: Cargo.toml
shared/src/: lib.rs
