[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "resource-agent"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sysinfo.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
clap.workspace = true
dotenv.workspace = true
hostname = "0.4"
libc = "0.2"
