[package]
name = "manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "resource-manager"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap.workspace = true
dotenv.workspace = true
uuid.workspace = true
libc = "0.2"
